app/assets/stylesheets/navbar.css
header {
  display: flex;
  align-items: center;
  height: 3.75rem;
  padding: 0.688rem 1.25rem;
  gap: 1rem;
}

#logo {
  width: 8.25rem;
  height: 2.375rem;
}

#burger {
  display: flex;
  gap: 0.656rem;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  background: none;
  border: none;
  z-index: 999;
  padding: 0.5rem 0.125rem;
}

#burger span {
  width: 2.375rem;
  height: 0.063rem;
  background-color: #868686;
}

#burger span:nth-child(2) {
  background-color: var(--green);
}

#burger.active {
  position: fixed;
  right: 1.25rem;
}

#burger.active span:nth-child(1) {
  transform: translateY(1.125rem) rotate(45deg);
}

#burger.active span:nth-child(2) {
  opacity: 0;
}

#burger.active span:nth-child(3) {
  transform: translateY(-0.313rem) rotate(-45deg);
}

#search-container {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  width: calc(100% - 10.625rem);
}

#search-wrapper {
  display: none;
  background-color: var(--white);
  border-radius: 0 0 0.313rem 0.313rem;
  border-bottom: 0.063rem solid var(--gray);
  box-shadow: 0 0.25rem 0.25rem 0 rgba(0, 0, 0, 0.25);
}

#search-icon {
  width: 1.688rem;
  height: 1.5rem;
}

#search-form {
  display: flex;
  padding: 0.5rem 1.25rem;
}

#search-field {
  background-color: transparent;
  width: 100%;
  border: none;
}

#search-field::placeholder {
  font-size: 1.125rem;
  color: var(--gray);
}

#search-field:focus {
  outline: none;
}

#search-results {
  border-top: 0.031rem solid var(--gray);
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.search-results-link-container {
  height: auto;
  border: 0.031rem solid var(--gray);
  width: 100%;
}

.search-results-link {
  padding: 1rem 1.25rem;
  text-decoration: none;
  display: block;
}

.extend {
  z-index: 999;
  display: block !important;
  position: absolute;
  top: 3.75rem;
  left: 0;
  width: 100%;
}

nav {
  display: flex;
}

#nav-menu {
  display: none;
}

#nav-menu.active {
  position: fixed;
  overflow: hidden;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 0.125rem solid var(--dark-green);
  background-color: var(--white);
  z-index: 999;
  padding-top: 5.625rem;
  padding-bottom: 6.25rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  list-style-type: none;
}

#add-place-link {
  display: flex;
  align-items: center;
  gap: 0.313rem;
  font-size: 1.125rem;
}

#sign-in-link {
  height: 2.625rem;
  border-radius: 1.25rem;
  background: var(--green);
  color: var(--white);
  font-weight: 500;
  line-height: 100%;
  padding: 0.813rem 1.313rem;
  font-size: 1.125rem;
}

#account-icon {
  display: none;
}

.dropdown {
  list-style-type: none;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
  font-size: 1.125rem;
}

#logout-link {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 9.063rem;
  height: 2.625rem;
  border-radius: 1.25rem;
  border: 0.063rem solid var(--gray);
  padding: 0.5rem 1.313rem;
}

#nav-menu.hidden {
  display: none;
}

.hidden {
  display: none;
}

@media (min-width: 1024px) {
  header {
    justify-content: space-between;
    padding: 1rem 3rem;
    height: 4.375rem;
  }

  #search-container {
    justify-content: center;
    flex-direction: row-reverse;
    width: auto;
  }

  #search-wrapper {
    display: flex;
    flex-direction: column;
    width: 25rem;
    border: none;
    position: relative;
    padding-left: 0.188rem;
    border-radius: 0;
    box-shadow: none;
  }

  #search-icon {
    width: 1.188rem;
    height: 1.188rem;
  }

  #search-form {
    height: 100%;
    padding: 0;
  }

  #search-field {
    height: 3.125rem;
    font-size: 1.125rem;
  }

  #search-field::placeholder {
    opacity: 0.8;
    color: var(--gray);
    font-size: 1.125rem;
    font-weight: 400;
  }

  .search-results-link-container {
    border-top: 0.063rem solid var(--gray);
    border-left: 0.063rem solid var(--gray);
    border-right: 0.063rem solid var(--gray);
    border-bottom: none;
  }

  .search-results-link-container:last-of-type {
    border-bottom: 0.063rem solid var(--gray);
  }

  #search-results {
    border-top: 0.031rem solid var(--gray);
    z-index: 999;
    position: absolute;
    top: 2.813rem;
    left: 0;
    padding: 0;
    border: none;
    width: 100%;
    background-color: var(--white);
  }

  .search-results-link {
    padding-left: 0.625rem;
    border: none;
  }

  #burger {
    display: none;
  }

  #nav-menu {
    display: flex;
    gap: 2rem;
    list-style-type: none;

    /* width: 41.688rem; */
    justify-content: flex-end;
  }

  .nav-link {
    display: flex;
    align-items: center;
  }

  .nav-link span {
    white-space: nowrap;
  }

  #add-place-link {
    gap: 0.125rem;
  }

  .wrapper {
    position: relative;
    display: inline-block;
  }

  #account-icon {
    display: block;
  }

  .dropdown {
    display: none;
    position: absolute;
    right: 0;
    border-radius: 0 0 0.625rem 0.625rem;
    background: var(--white);
    box-shadow: 0 0.25rem 1.25rem 0 rgba(0, 0, 0, 0.25);
    padding: 0.5rem 1rem;
    font-size: 1.125rem;
    width: 6.625rem;
    height: 5.25rem;
    z-index: 1;
  }

  .wrapper:hover .dropdown {
    display: flex;
    align-items: center;
    gap: 0.5rem;
  }

  #logout-link {
    border: none;
    padding: 0;
    justify-content: center;
  }

  #logout-icon {
    display: none;
  }
}

